# chat

./: app.py  pyproject.toml  requirements.txt  test.py
instance/: chat.db
static/: styles.css
static/js/: chat.js
templates/: chat.html
tests/: test.py  test_app.py
