[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["Slate2d <slatedazty@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
emit = "0.4.0"
flask-socketio = "5.4.1"
flask-sqlalchemy = "3.1.1"
pytest = "8.3.3"
python-socketio = "5.11.4"
python-engineio = "4.9.1"
flask = ">=3.0.3,<3.1.0"
pytz = ">=2024.2,<2025.0"
sqlalchemy = ">=2.0.35,<2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
